--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Tommy Vo | Software Developer</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <link rel="shortcut icon" href="Tommy.ico" type="image/x-icon"> <!--favicon-->
         <link rel="stylesheet" href="fire.css">
         <link rel="stylesheet" href="bubbles.css">
     </head>
