--- a/index.html
+++ b/index.html
@@ -21,26 +21,26 @@
                             <span class="h1">See when you can retire given your lifestyle.</span>
                             <br><br>
                             <span>Monthly Spending in Retirement: </span><span id="labelFront">$</span><input id="spending" placeholder="0.00" type="number" min="0">
-                            <div class="info infoSpending"> &#x1F6C8; 
+                            <div class="info infoSpending"> &#128712;&nbsp;
                                 <span class="tooltip tooltipSpending">How much you plan on spending every month in retirement.</span>
                             </div>
                             <br><br>
                             <span>Current Investment: </span><span id="labelFront">$</span><input id="investment" placeholder="0.00" type="number" min="0">
-                            <div class="info infoInvestment"> &#x1F6C8; 
+                            <div class="info infoInvestment"> &#128712;&nbsp;
                                 <span class="tooltip tooltipInvestment">How much you currently have in investment.</span>
                             </div>
                             <br><br>
                             <span>Annual Contribution: </span><span id="labelFront">$</span><input id="annualContribution" placeholder="0.00" type="number" min="0">
-                            <div class="info infoAnnualContribution"> &#x1F6C8; 
+                            <div class="info infoAnnualContribution"> &#128712;&nbsp;
                                 <span class="tooltip tooltipAnnualContribution">How much you are adding to your investments annually.</span>
                             </div>
                             <br><br>
-                            <span>Return Rate: </span><input id="returnRate" placeholder="0.0" type="number" min="0"><span id="labelEnd">%</span>
-                            <div class="info infoReturnRate"> &#x1F6C8; 
+                            <span>Return Rate (%): </span><input id="returnRate" placeholder="0.0" type="number" min="0">
+                            <div class="info infoReturnRate"> &#128712;&nbsp;
                                 <span class="tooltip tooltipReturnRate">How much your investments are earning annually (percentage).</span>
                             </div>
                             <br><br>
-                            <span>Current Age: </span><span id="label"></span><input id="age" placeholder="0" type="number"><span id="labelEnd" min="0">years</span>
+                            <span>Current Age: </span><span id="label"></span><input id="age" placeholder="0" type="number">
                             <br><br>
                             <button onclick="calculate()">Calculate</button>
                             <hr>
