--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
                             <span id="outputTable"></span>
                         </div>
                     </section>
+                    
+                    <footer>
+                        <div class="padding">
+                            <div id="copyrightDate"></div>
+                        </div>
+                    </footer>
                 </div>
             </article>
         </main>
