--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Tommy Vo | Software Developer</title>
+        <title>FIRE | Financially Independent, Retire Early</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <link rel="shortcut icon" href="Tommy.ico" type="image/x-icon"> <!--favicon-->
         <link rel="stylesheet" href="fire.css">
