--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="container">
                     <section>
                         <div class="blurBox">
-                            <span class="h1" id="tommy">See when you can retire given your lifestyle.</span>
+                            <span class="h1">See when you can retire given your lifestyle.</span>
                             <br><br>
                             <span>Monthly Spending in Retirement: </span><span id="labelFront">$</span><input id="spending" placeholder="0.00" type="number" min="0">
                             <div class="info infoSpending"> &#128712;&nbsp;
