--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             <br><br>
                             <span>Current Age: </span><span id="label"></span><input id="age" placeholder="0" type="number">
                             <br><br>
-                            <button onclick="calculate()">Calculate</button>
+                            <input type="button" id="button" value="Calculate" onclick="calculate()">
                             <hr>
                             <span id="outputTable"></span>
                         </div>
