Added inflation rate

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
                                 <span class="tooltip tooltipReturnRate">How much your investments are earning annually (percentage).</span>
                             </div>
                             <br><br>
+                            <span>Inflation Rate (%): </span><input id="inflationRate" placeholder="2.52" type="number" min="0">
+                            <div class="info infoInflationRate"> &#128712;&nbsp;
+                                <span class="tooltip tooltipInflationRate">According to The World Bank, the average inflation rate in the US from 1989-2019 was 2.52%.</span>
+                            </div>
+                            <br><br>
                             <span>Current Age: </span><span id="label"></span><input id="age" placeholder="0" type="number">
                             <br><br>
                             <input type="button" id="button" value="Calculate" onclick="calculate()">
