--- a/index.html
+++ b/index.html
@@ -6,14 +6,9 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <link rel="shortcut icon" href="Tommy.ico" type="image/x-icon"> <!--favicon-->
         <link rel="stylesheet" href="fire.css">
-        <link rel="stylesheet" href="bubbles.css">
     </head>
     <body>
         <main>
-            <ul class="bubbles">
-                <li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li>
-            </ul>
-            
             <article>
                 <div class="container">
                     <section>
@@ -21,34 +16,34 @@
                             <span class="h1">See when you can retire given your lifestyle.</span>
                             <br><br>
                             <span>Monthly Spending in Retirement: </span><span id="labelFront">$</span><input id="spending" placeholder="0.00" type="number" min="0">
-                            <div class="info infoSpending"> &#128712;&nbsp;
+                            <div class="info infoSpending"><span id="infoIcon">i</span>
                                 <span class="tooltip tooltipSpending">How much you plan on spending every month in retirement.</span>
                             </div>
                             <br><br>
                             <span>Current Investment: </span><span id="labelFront">$</span><input id="investment" placeholder="0.00" type="number" min="0">
-                            <div class="info infoInvestment"> &#128712;&nbsp;
+                            <div class="info infoInvestment"><span id="infoIcon">i</span>
                                 <span class="tooltip tooltipInvestment">How much you currently have in investment.</span>
                             </div>
                             <br><br>
                             <span>Annual Contribution: </span><span id="labelFront">$</span><input id="annualContribution" placeholder="0.00" type="number" min="0">
-                            <div class="info infoAnnualContribution"> &#128712;&nbsp;
+                            <div class="info infoAnnualContribution"><span id="infoIcon">i</span>
                                 <span class="tooltip tooltipAnnualContribution">How much you are adding to your investments annually.</span>
                             </div>
                             <br><br>
                             <span>Return Rate (%): </span><input id="returnRate" placeholder="0.0" type="number" min="0">
-                            <div class="info infoReturnRate"> &#128712;&nbsp;
+                            <div class="info infoReturnRate"><span id="infoIcon">i</span>
                                 <span class="tooltip tooltipReturnRate">How much your investments are earning annually (percentage).</span>
                             </div>
                             <br><br>
                             <span>Inflation Rate (%): </span><input id="inflationRate" placeholder="2.52" type="number" min="0">
-                            <div class="info infoInflationRate"> &#128712;&nbsp;
+                            <div class="info infoInflationRate"><span id="infoIcon">i</span>
                                 <span class="tooltip tooltipInflationRate">According to The World Bank, the average inflation rate in the US from 1989-2019 was 2.52%.</span>
                             </div>
                             <br><br>
                             <span>Current Age: </span><span id="label"></span><input id="age" placeholder="0" type="number">
                             <br><br>
                             <input type="button" id="button" value="Calculate" onclick="calculate()">
-                            <hr>
+                            <span id="outputParagraph"></span>
                             <span id="outputTable"></span>
                         </div>
                     </section>
