--- a/index.html
+++ b/index.html
@@ -15,27 +15,27 @@
                         <div class="blurBox">
                             <span class="h1">See when you can retire given your lifestyle.</span>
                             <br><br>
-                            <span>Monthly Spending in Retirement: </span><span id="labelFront">$</span><input id="spending" placeholder="0.00" type="number" min="0">
+                            <span>Monthly Spending in Retirement: </span><span id="labelFront">$</span><input id="spending" placeholder="0.00" type="number">
                             <div class="info infoSpending"><span id="infoIcon">i</span>
                                 <span class="tooltip tooltipSpending">How much you plan on spending every month in retirement.</span>
                             </div>
                             <br><br>
-                            <span>Current Investment: </span><span id="labelFront">$</span><input id="investment" placeholder="0.00" type="number" min="0">
+                            <span>Current Investment: </span><span id="labelFront">$</span><input id="investment" placeholder="0.00" type="number">
                             <div class="info infoInvestment"><span id="infoIcon">i</span>
                                 <span class="tooltip tooltipInvestment">How much you currently have in investment.</span>
                             </div>
                             <br><br>
-                            <span>Annual Contribution: </span><span id="labelFront">$</span><input id="annualContribution" placeholder="0.00" type="number" min="0">
+                            <span>Annual Contribution: </span><span id="labelFront">$</span><input id="annualContribution" placeholder="0.00" type="number">
                             <div class="info infoAnnualContribution"><span id="infoIcon">i</span>
                                 <span class="tooltip tooltipAnnualContribution">How much you are adding to your investments annually.</span>
                             </div>
                             <br><br>
-                            <span>Return Rate (%): </span><input id="returnRate" placeholder="0.0" type="number" min="0">
+                            <span>Return Rate (%): </span><input id="returnRate" placeholder="0.0" type="number">
                             <div class="info infoReturnRate"><span id="infoIcon">i</span>
                                 <span class="tooltip tooltipReturnRate">How much your investments are earning annually (percentage).</span>
                             </div>
                             <br><br>
-                            <span>Inflation Rate (%): </span><input id="inflationRate" placeholder="2.52" type="number" min="0">
+                            <span>Inflation Rate (%): </span><input id="inflationRate" placeholder="2.52" type="number">
                             <div class="info infoInflationRate"><span id="infoIcon">i</span>
                                 <span class="tooltip tooltipInflationRate">According to The World Bank, the average inflation rate in the US from 1989-2019 was 2.52%.</span>
                             </div>
