--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>FIRE | Financially Independent, Retire Early</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <link rel="shortcut icon" href="Tommy.ico" type="image/x-icon"> <!--favicon-->
+        <link rel="shortcut icon" href="FIRE_Logo.ico" type="image/x-icon"> <!--favicon-->
         <link rel="stylesheet" href="fire.css">
     </head>
     <body>
