--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>FIRE | Financially Independent, Retire Early</title>
+        <title>FIRE Calculator | Tommy Vo</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <link rel="shortcut icon" href="FIRE_Logo.ico" type="image/x-icon"> <!--favicon-->
+        <link rel="icon" href="FIRE_Logo.svg" type="image/svg"> <!--favicon-->
         <link rel="stylesheet" href="fire.css">
     </head>
     <body>
@@ -12,6 +12,8 @@
             <article>
                 <div class="container">
                     <section>
+                        <img id="FIRE_Logo" src="FIRE_Logo.svg">
+                        <div id="title">Financially Independent, Retire Early</div>
                         <div class="blurBox">
                             <span class="h1">See when you can retire given your lifestyle.</span>
                             <br><br>
