--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <div class="container">
                     <section>
                         <img id="FIRE_Logo" src="FIRE_Logo.svg">
-                        <div id="title">Financially Independent, Retire Early</div>
+                        <div id="title">Financially Independent, Retire Early <span style="font-size: 1rem; color: black;">(alpha)</span></div>
                         <div class="blurBox">
                             <span class="h1">See when you can retire given your lifestyle.</span>
                             <br><br>
