--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <article>
                 <div class="container">
                     <section>
-                        <img id="FIRE_Logo" src="FIRE_Logo.svg">
+                        <img id="FIRE_Logo" src="FIRE_Logo.svg" onclick="resetInputs()">
                         <div id="title">Financial Independence, Retire Early <span style="font-size: 1rem; color: black;">(alpha)</span></div>
                         <div class="blurBox">
                             <span class="h1">See when you can retire given your lifestyle.</span>
